2011-04-25  James Youngman  <jay@gnu.org>

	Allow non-CSSC implementations to XFAIL for tricky dates.
	* tests/year-2000/prs-y2k.sh: Divide tests into "easy" (which any
	y2k-compliant version of SCCS must pass) and "harder" (which
	require correct implementation of the windowing scheme and correct
	conversion of dates at the limits of a 32-bit time_t).  Require
	CSSC to pass all tests, but allow other implementations to XFAIL
	on the hader tests.
	* tests/year-2000/ext.sh: Correct the mechanism by which we figure
	out if we are testing CSSC itself.
	* tests/common/test-common (fail): return false on XFAIL.

	Move source and documentation out of bsd/ into src/ and docs/.
	* COPYING.bsd: Move from bsd/COPYING.bsd.
	* bsd/sccs.1: move to docs/sccs.1
	* bsd/sccs.c: move to src/sccs.c
	* tests/common/command-names: Locate the sccs binary in its new
	location.
	* src/Makefile.am (generic_CPPFLAGS): Put preprocessor flags here
	so that AM_CPPFLAGS and AM_CFLAGS can both refer to it, now that
	we have both C and C++ sources in this directory.
	(LDADD): Link against gnulib.
	(AM_CFLAGS): #define PREFIX for the benefit of sccs.c.
	(AM_INSTALLCHECK_STD_OPTIONS_EXEMPT): Exempt the binaries from the
	gnits install check which requires them to support --version and
	--help.
	* AUTHORS: Mention the new location of the COPYING.bsd file.
	* THANKS: Point to COPYING.bsd in its new location.
	* docs/.ispell_english: Incorporate contents of bsd/.ispell_english.
	* docs/Makefile.am: Add sccs.1 and sccs.me.
	* bsd/.ispell_english, bad/Makefile.am, bsd/Makefile.bsd: Delete.
	* bsd/sccs.me: move to docs/sccs.me
	* configure.ac: refer to src/sccs.c instead of bsd/sccs.c
	* Makefile.am (SUBDIRS): Remove bsd from SUBDIRS.
	* README: sccs no longer lives in bsd/sccs.

	Produce better test diagnostics when a command unexpectedly fails.
	* tests/common/test-common (docommand): when the return value is
	zero, print any error message that had been issued on stderr.
