@@ -417,8 +417,8 @@ static int atomic_nfs_create(const mystring& path, int flags, int perms)
                 }
               else              /* link(2) failed. */
                 {
-		  /* A VirtualBox shared folder (Solaris guest, Linux host, 
-		     ext3 as the underlying filesystem) returns ENOSYS when
+		  /* A VirtualBox shared folder (Solaris guest, Linux host,
+		     ext3 as the underlying file system) returns ENOSYS when
 		     we attempt to use link(2). */
                   if (EPERM == link_errno || ENOSYS == link_errno)
                     {
